src/objects/Travel_Settings__mdt.object
<CustomObject>
    <description>Configuration settings for the Travel Management feature.</description>
    <label>Travel Settings</label>
    <pluralLabel>Travel Settings</pluralLabel>
    <fields>
        <fullName>Security_Ops_Email__c</fullName>
        <label>Security Ops Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Test_Mode__c</fullName>
        <label>Is Test Mode</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>